--- a/LaTeX/Projektdokumtation/Projektdokumentation.tex
+++ b/LaTeX/Projektdokumtation/Projektdokumentation.tex
@@ -1,7 +1,7 @@
 \input{preamble}
 
 \begin{document}
-\include{Forside/Glossary} %create glossary
+\include{Forside/Glossary} 						%Create glossary
 
 \include{Forside/Forside}
 \include{Forside/Underskrift}
@@ -11,9 +11,7 @@
 \include{Systemarkitektur/Systemarkitektur}
 \include{Systemdesign/Systemdesign}
 \include{Accepttest/Accepttest}
-%\include{Definitionsliste}
-%\include{Tidsplan}
-%	\include{Referencer/Referencer}
-\include{Forside/Glossary2} %display glossary
-\include{bibtex}
+
+\include{Forside/Glossary2} 					%Print glossary
+\include{bibtex}								%Print references
 \end{document}
