--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL.tex
@@ -1,1 +1,5 @@
 \subsection{Data Access Layer}
+
+\input{Systemdesign/Frontend/DAL/FilePrinter}
+\input{Systemdesign/Frontend/DAL/DBcontrol}
+\input{Systemdesign/Frontend/DAL/Connection}
