Små fikses til 4+1

--- a/LaTeX/Projektdokumtation/Systemarkitektur/ImplementeringsView/Komponentbeskrivelser.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/ImplementeringsView/Komponentbeskrivelser.tex
@@ -2,9 +2,9 @@
 
 \subsubsection{Administrationssytstem} Denne bruger sharedLib i samtlige lag. Dette indebærer bl.a. modeller, protokoller, marshallers mv.
 
-\subsubsection{Central server} Denne benytter sharedLib til protokoller og modeller.
+\subsubsection{CentralServer} Denne benytter sharedLib til protokoller og modeller.
 
-\subsubsection{Kassesystemet} benytter som administrationssystemet sharedLib i dets grafiske lag samt business logic lag. Igen bruges der modeller og protokoller så alle er enige om disse.
+\subsubsection{Kasseapparatet} Benytter ligesom Administrationssystemet, SharedLib i dets grafiske lag samt business logic lag. Igen bruges der modeller og protokoller så alle er enige om disse.
 
 \subsubsection{SharedLib}
 Denne en fælles afhængighed for alle systemets komponenter. Denne indeholder modeller
