--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeKasseapparat.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeKasseapparat.tex
@@ -11,6 +11,6 @@ Kasseapparatet er den del af systemet hvor produktkataloget bliver vist og benyt
 	\label{fig:logview_kasse_sekvensdiagram}
 \end{figure}
 
-Sekvensdiagrammet viser hvordan kasseapparatet kommunikerer med de andre pakker i systemet. Kasseaparatet kommunikerer udelukkende med Centralserver. Når kasseapparatet skal sende en besked til Centralserver bruger den SharedLib til at konvertere et kommandoobjekt til XML og sender herefter denne til Centralserveren. Centralserveren sender derefter en XML-besked tilbage som så derefter bliver omskrevet til et kommandoobjekt, igen ved brug af SharedLib.
+Sekvensdiagrammet viser hvordan kasseapparatet kommunikerer med de andre pakker i systemet. Kasseapparatet kommunikerer udelukkende med Centralserver. Når kasseapparatet skal sende en besked til Centralserver bruger den SharedLib til at konvertere et kommandoobjekt til XML og sender herefter denne til Centralserveren. Centralserveren sender derefter en XML-besked tilbage som så derefter bliver omskrevet til et kommandoobjekt, igen ved brug af SharedLib.
 
 \newpage
