--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Realiseringer/UC1-2.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Realiseringer/UC1-2.tex
@@ -1,4 +1,4 @@
-\textbf{Use Case 1 - Gennemfør salg}
+\textbf{Use Cases 1 og 2}
 
 Disse Use Cases beskriver følgende funktionalitet:
 \begin{itemize}
