--- a/LaTeX/Projektdokumtation/Systemdesign/FrontendDesign.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/FrontendDesign.tex
@@ -1,6 +1,7 @@
 \section{Kasseapparat}
 
 \input{Systemdesign/Frontend/Intro} 
+\newpage
 \input{Systemdesign/Frontend/GUI}
 \input{Systemdesign/Frontend/BLL}
 \input{Systemdesign/Frontend/DAL}
