Added "Slet produkt" image

--- a/LaTeX/Projektdokumtation/Systemdesign/backend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/GUI.tex
@@ -32,4 +32,11 @@ Som det ses på figur \ref{fig:admin_final_hovedvindue} er designet meget lig de
 
 I dialogvinduet (figur \ref{fig:admin_final_dialog}) er der tre tekstbokse, en liste over kategorier og tre knapper. Alle dialogvinduer følger dette design og afviger kun fra hinanden ved antallet af tekstbokse og knapper. Positionerne forbliver altid de samme.
 
-Den eneste dialog der afviger en del fra designet er til "Slet produkt". Dette er blot et popup-vindue med Ja/Nej-mulighed.
+Den eneste dialog der afviger en del fra designet er til "Slet produkt". Dette er blot et popup-vindue med Ja/Nej-mulighed. Et billede af popup-vinduet kan ses på figur \ref{fig:admin_final_sletprodukt}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\textwidth]{Systemdesign/backend/Images/AdminDesignSletProdukt}
+	\caption{Det endelige udseende af \gls{AS} - Dialogvindue for Slet produkt}
+	\label{fig:admin_final_sletprodukt}
+\end{figure}
