Pictures til Kasse DAL

--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Connection.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Connection.tex
@@ -2,4 +2,11 @@
 
 Connection kan oprette og nedlægge en TcpClient, som forbinder \gls{KA} op til \gls{CS}. Desuden kan Connection sende en tekst string over den oprettede TcpClient, samt læse en tekst string her fra.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/Connection}
+    \caption{Connection}
+    \label{fig:Connection}
+\end{figure}
+
 \bigskip
