--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FakeDBcontrol.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FakeDBcontrol.tex
@@ -2,4 +2,11 @@
 
 FakeDBcontrol er opretter med henblik på at kunne test \gls{KA}, uden at der er forbindelse til \gls{CS}. FakeDBcontrol giver adgang til en række test produkter.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/FakeDBcontrol}
+    \caption{FakeDBcontrol}
+    \label{fig:FakeDBcontrol}
+\end{figure}
+
 \bigskip
