--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FilePrinter.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FilePrinter.tex
@@ -2,4 +2,11 @@
 
 FilePrinters ansvar er at danne en salgskvitering efter et salg er gennemført. Salgskvitteringen bliver dannet som en simpel tekst fil, navngivet efter dato og klokkeslet for købet. Denne tekst fil vil så i fremtidig arbejde kunne udskrives som en kvitering til kunden. 
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/FilePrinter}
+    \caption{FilePrinter}
+    \label{fig:FilePrinter}
+\end{figure}
+
 \bigskip
