--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/DBcontrol.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/DBcontrol.tex
@@ -2,4 +2,11 @@
 
 DBcontrols ansvar er at sende korrekt formatterede string til Connection. DBcontrol benytter \gls{SL} til at oprette kommando objecter med den infomation som skal sendes, samt at encode/decode disse til XML strings.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/DBcontrol}
+    \caption{DBcontrol}
+    \label{fig:DBcontrol}
+\end{figure}
+
 \bigskip
