--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/Intro.tex
@@ -8,9 +8,9 @@ Vores system er herunder beskrevet ved følgende pakkediagram.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{Systemdesign/Frontend/pics/KassePakker}eG
+	\includegraphics[width=0.8\textwidth]{Systemdesign/Frontend/pics/KassePakker}
 	\caption{Pakkediagram over kasseapparat.}
-	\label{fig:EndeligUI}
+	\label{fig:EndeligeGUI}
 \end{figure}
 
 Som man kan se på det ovenstående pakkediagram består kasseapparatet primært af grænsefladen og et data access lag. Dette er fordi at kasse apparatet ikke har som ansvar at kunne oprette/ redigere og slette produkter, men bare at afspejle produkterne i databasen. 
