Tiny addition to backend design

--- a/LaTeX/Projektdokumtation/Systemdesign/backend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/GUI.tex
@@ -40,3 +40,5 @@ Den eneste dialog der afviger en del fra designet er til "Slet produkt". Dette e
 	\caption{Det endelige udseende af \gls{AS} - Dialogvindue for Slet produkt}
 	\label{fig:admin_final_sletprodukt}
 \end{figure}
+
+Popup-vinduet på figur \ref{fig:admin_final_sletprodukt} er implementeret i MainWindowViewModel, da funktionaliteten af vinduet syntes for simpelt til at kunne retfærdiggøre at skulle lave et helt dialogvindue med tilhørende ViewModel.
