--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Connection.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Connection.tex
@@ -4,7 +4,7 @@ Connection kan oprette og nedlægge en TcpClient, som forbinder \gls{KA} op til 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/Connection}
+    \includegraphics[width=50mm]{Systemdesign/Frontend/DAL/Pics/Connection}
     \caption{Connection}
     \label{fig:Connection}
 \end{figure}
