--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/DBcontrol.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/DBcontrol.tex
@@ -4,7 +4,7 @@ DBcontrols ansvar er at sende korrekt formatterede string til Connection. DBcont
 
 \begin{figure}[H]
     \centering
-    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/DBcontrol}
+    \includegraphics[width=60mm]{Systemdesign/Frontend/DAL/Pics/DBcontrol}
     \caption{DBcontrol}
     \label{fig:DBcontrol}
 \end{figure}
