--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FakeDBcontrol.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FakeDBcontrol.tex
@@ -4,7 +4,7 @@ FakeDBcontrol er opretter med henblik på at kunne test \gls{KA}, uden at der er
 
 \begin{figure}[H]
     \centering
-    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/FakeDBcontrol}
+    \includegraphics[width=60mm]{Systemdesign/Frontend/DAL/Pics/FakeDBcontrol}
     \caption{FakeDBcontrol}
     \label{fig:FakeDBcontrol}
 \end{figure}
