--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FilePrinter.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/FilePrinter.tex
@@ -4,7 +4,7 @@ FilePrinters ansvar er at danne en salgskvitering efter et salg er gennemført. 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[]{Systemdesign/Frontend/DAL/Pics/FilePrinter}
+    \includegraphics[width=50mm]{Systemdesign/Frontend/DAL/Pics/FilePrinter}
     \caption{FilePrinter}
     \label{fig:FilePrinter}
 \end{figure}
