Updated littrature and classes and shizle

--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -17,3 +17,10 @@
   		note = {Tilgået: 08/12-2015}
 }
 
+@misc{	ASYNC,
+		author = "Thomas Levesque",
+		title = "AsyncObservableCollection",
+		howpublished = {\url{https://gist.github.com/thomaslevesque/10023516}},
+		note = {Tilgået: 09/12-2015}
+		year = "2013"
+}
