--- a/LaTeX/Projektdokumtation/Systemdesign/backend/DAL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/DAL.tex
@@ -10,12 +10,12 @@ Til at sende data benyttes en ModelHandler [Ref], som hver i sær har en metode 
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[width=1\textwidth]{Systemdesign/backend/Images/DataSend.png}
+    \includegraphics[width=0.45\textwidth]{Systemdesign/backend/Images/DataSend.png}
     \caption{Eksempel på hvordan CreateProduct bliver behandlet i systemet og sendt til Central Server}
     \label{fig:CreateSend}
 \end{figure}
 
-Derefter afsluttes der. Det betyder at når der eksempelvis oprettes et nyt produkt, bliver der ikke opdateret noget i systemet, der bliver udelukkende sendt data til serveren.\\\\
+Derefter afsluttes der. Det betyder at når der eksempelvis oprettes et nyt produkt, bliver der ikke opdateret noget i systemet, der bliver udelukkende sendt data til serveren.\\
 
 
 For at modtage data, subscriber MainWindowViewModel på nogle forskellige events, som eksempelvis OnProductCategoryDeleted, OnProductEdited mf. Dette gøres igennem klassen SocketEventHandlers [Ref], som også indeholder de eventhandlere der bliver kaldt, når et event raises på serveren.  Det er derfor disse eventhandlere som håndtere dataen, og lægger den nye data ind i datamodellerne – og det er først der, der bliver opdateret lokalt. På den måde vil der aldrig eksistere noget i databasen der ikke eksisterer i Administrationssystemet og vice versa. 
