--- a/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/BLL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/BLL.tex
@@ -1,7 +1,198 @@
 \subsubsection{Klassebeskrivelser}
 
+Herunder ses en  beskrivelse af samtlige klasser i business logic layer. Beskrivelsen vil fremgå som \textit{klassenavn"} efterfulgt af en kort beskrivelse af klassens ansvar og funktionalitet.\\\\
 
-\textbf{Fancy klasse}
-Trololololo lolo alkasklasælk. 
-askmdsalksad asdsaklsda\\
-sdakdmsalsadlkmsadklmdslkmsda kmasmd mlksmklsamlsd
+\paragraph{Brains} namespacet indeholder generel businesslogik for at kunne udføre handlinger, så som at oprette kommandoer, parse objekter til XMl mv. Den benytter sig meget af det delte bibliotek \gls{SL}.\\
+
+
+\textbf{Error}\\
+Errorklassen er en fejlbeskedprinter, som kan printe en besked på skærmen, eksempelvis ved fejl eller notifikationer.
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Error.png}
+    \caption{Error}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+ \bigskip 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+\textbf{ModelHandler}\\
+ModelHandlerens ansvar er at lave den kommando der skal sendes til \gls{CS}. Denne kommando kan være til for eksempelvis at oprette eller nedlægge et produkt. Denne klasse er desuden den klasse, som kalder klienten til at sende den netop oprettede kommando. 
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.45\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/ModelHandler.png}
+    \caption{ModelHandler}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip
+ 
+ 
+ 
+ 
+ 
+
+\textbf{PrjProtokol}\\
+PrjProtokol har til ansvar at lave kald til \gls{SL} og dens protokol.Den sørger udelukkende for at få lavet de rigtige kald, for at få et eventuelt objekt parset om til en XML-streng, igen. \bigskip
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.45\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/PrjProtokol.png}
+    \caption{ModelHandler}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip
+ 
+
+\bigskip
+\bigskip
+\textbf{Communications} namespacet indeholder klasser der gør det muligt at skabe forbindelse til \gls{CS} .\\
+
+\textbf{Client}
+Denne benytter singleton-klassen \textit{LSC}\footnote{LSC findes på side \pageref{LSC_Beskrivelse}.} til at oprette forbindelse til \gls{CS} og sende data igennem denne. Det er denne klasse som bruges i bl.a. ModelHandleren{\footnote{ModelHandler findes på side \pageref{Modelhandler_Beskrivelse}.}} til at sende data.
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.55\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Client.png}
+    \caption{Client}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+
+
+\textbf{LSC}
+\label{LSC_Beskrivelse}\\
+LSC er en wrapper-klasse som indkapsulerer en socketforbindelse fra \gls{SL} som en singleton. Singleton benyttes således at uanset hvilken instans af  client i programmet der bruges, vil den samme forbindelse blive brugt. 
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.30\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/LSC.png}
+    \caption{LSC}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+
+
+
+\bigskip
+\bigskip
+
+
+
+
+\textbf{Events} namespacet indeholder klasser, som fungerer som events, til brug i kommunikation mellem viewmodels. Der vil i dette afsnit beskrives flere klasser i en beskrivelse, da de er så ens som de er. Der er desuden dataobjekter i dette namespace, til brug i sammenhæng med events.\\
+\bigskip
+
+\textbf{EditProductParameters, EditCategoryParms, DeleteCategoryParms}\\
+Et objekt indeholdende data der bliver brugt i en anden viewmodel, når NewEditProductData eventet raises. Dette bruges da kun én parameter kan bruges i disse events. Kommunikation mellem viewmodels er beskrevet nærmere på side \pageref{viewcomm}. \bigskip
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.50\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Parms.png}
+    \caption{Paramtereklasser}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+
+\textbf{CategoryListUpdated, NewEditProductData, NewEditCategoryData, NewDeleteCategoryData}
+Disse arver ale sammen fra PubSubEvent\footnote{En eventtype som bruges i PRISM ~\cite{PRISM}}. Disse events raises når et vindue med en anden viewmodel er loaded, og der ønskes at dele data mellem disse viewmodels. Kommunikation mellem viewmodels er beskrevet nærmere på side \pageref{viewcomm}.  \bigskip
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.50\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Events1.png}
+    \caption{Events}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+\newpage
+	
+
+
+
+\textbf{AddProductWindowLoaded, DeleteCategoryWindowLoaded, EditCategoryWindowLoaded, AddCategoryWindowLoaded, EditProductWindowLoaded}
+Disse klasser arver ale sammen fra PubSubEvent\footnote{En eventtype som bruges i PRISM ~\cite{PRISM}}. De fungerer således som et event de raises, når et vindue loades, således at der kan deles data. Kommunikation mellem viewmodels er beskrevet nærmere på side \pageref{viewcomm}. \bigskip
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.50\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Events2.png}
+    \caption{Events}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+
+
+\bigskip
+\bigskip
+
+\textbf{SocketEvents} namespacet indeholder klasser til brug i forbindelse med events raised fra \gls{SL}.\\
+\bigskip
+
+\textbf{SocketEventHandlers}\\
+Denne klasse indeholder alle eventhandlere som bruges, når der bliver raised et event fra \gls{SL}'s sockets. Dette kunne eksempelvis være et event der fortæller at produktlisten er opdateret eller lignende. Den har desuden subscribemetoder, som bruges til at subscribe på disse events.
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.50\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/SocketEvents.png}
+    \caption{SocketEventHandlers}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+ 
+ 
+\textbf{SingleEventAggregator}\\
+Denne klasse indeholder en EventAggregator fra PRISM~\cite{PRISM}, som man håndterer alle events, publishers og subscribers. Denne er implementeret som en singleton, således alle der bruger denne, bruger den samme.
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.30\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/agg.png}
+    \caption{SingleEventAggregator}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+
+\bigskip
+\bigskip
+
+\textbf{Datamodels} namespacet indeholder alle datamodeller. Det er disse datamodeller hele systemet benytter.\\
+\bigskip
+
+\textbf{BackendProductCategoryList}\\
+Denne klasse indeholder en liste af kategorier. Det er denne datatype som indeholder al data fra \gls{DB} , når det hentes ned fra \gls{CS}. Denne klasse arver fra en anden klasse, ASyncObservableCollection, som er skrevet af Thomas Levesque~\cite{ASYNC}. Dette har været nødvendigt, da der i nogle tilfælde ville være flere tråde der arbejdede på denne collection.
+\begin{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.30\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/BPCList.png}
+    \caption{BackendProductCategoryList}
+    \label{fig:modelhandler}
+\end{figure}
+\end{center}
+\label{Modelhandler_Beskrivelse}
+ \bigskip 
+
