Kasse DAL+BLL bib

--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/BLL/ProductCategoryList.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/BLL/ProductCategoryList.tex
@@ -1,6 +1,6 @@
 \textbf{ProductCategoryList}
 
-ProductCategoryList er en ObservableCollection<ProductCategory>, som indholder de sidst hentede ProductCategorier fra \gls{CS}. Når Update() kaldes opdatere ProductCategoryList sig selv ved at hente alle ProductCateogies fra \gls{CS} via DBcontrol, og overskriver sin ObservableCollection med disse.
+ProductCategoryList er en ObservableCollection<ProductCategory>~\cite{ObsCol}, som indholder de sidst hentede ProductCategorier fra \gls{CS}. Når Update() kaldes opdatere ProductCategoryList sig selv ved at hente alle ProductCateogies fra \gls{CS} via DBcontrol, og overskriver sin ObservableCollection med disse.
 
 \begin{figure}[H]
     \centering
