--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -24,3 +24,15 @@
 		note = {Tilgået: 09/12-2015}
 		year = "2013"
 }
+
+@misc{	ObsCol,
+		title = {ObservableCollection<T> Class},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/ms668604(v=vs.110).aspx}},
+  		note = {Tilgået: 09/12-2015}
+}
+
+@misc{	TcpC,
+		title = {TcpClient Class},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/system.net.sockets.tcpclient(v=vs.110).aspx}},
+  		note = {Tilgået: 09/12-2015}
+}
