--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Connection.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Connection.tex
@@ -1,6 +1,6 @@
 \textbf{Connection}
 
-Connection kan oprette og nedlægge en TcpClient, som forbinder \gls{KA} op til \gls{CS}. Desuden kan Connection sende en tekst string over den oprettede TcpClient, samt læse en tekst string her fra.
+Connection kan oprette og nedlægge en TcpClient~\cite{TcpC}, som forbinder \gls{KA} op til \gls{CS}. Desuden kan Connection sende en tekst string over den oprettede TcpClient, samt læse en tekst string her fra.
 
 \begin{figure}[H]
     \centering
