Prep for test afsnit

--- a/LaTeX/Projektdokumtation/Projektdokumentation.tex
+++ b/LaTeX/Projektdokumtation/Projektdokumentation.tex
@@ -10,6 +10,7 @@
 \include{Kravspecifikation/Kravspecifikation}
 \include{Systemarkitektur/Systemarkitektur}
 \include{Systemdesign/Systemdesign}
+\include{Test/Test}
 \include{Accepttest/Accepttest}
 
 \include{Forside/Glossary2} 					%Print glossary
