Added text and shizzle

--- a/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/DAL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/DAL.tex
@@ -11,10 +11,10 @@ Denne benytter singleton-klassen \textit{LSC}\footnote{LSC findes på side \page
     \centering
     \includegraphics[width=0.55\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Client.png}
     \caption{Client}
-    \label{fig:modelhandler}
+    \label{fig:Client}
 \end{figure}
 \end{center}
-\label{Modelhandler_Beskrivelse}
+\label{Client_Beskrivelse}
  \bigskip 
 
 
@@ -25,9 +25,9 @@ LSC er en wrapper-klasse som indkapsulerer en socketforbindelse fra \gls{SL} som
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.30\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/LSC.png}
-    \caption{LSC}
-    \label{fig:modelhandler}
+    \caption{LSC }
+    \label{fig:LSC}
 \end{figure}
 \end{center}
-\label{Modelhandler_Beskrivelse}
+\label{LSC_Beskrivelse}
  \bigskip 
