All text for viewmodels in backend design

--- a/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/BLL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/BLL.tex
@@ -5,16 +5,67 @@ Herunder ses en  beskrivelse af samtlige klasser i business logic layer. Beskriv
 
 \textbf{Brains} namespacet indeholder generel businesslogik for at kunne udføre handlinger, så som at oprette kommandoer, parse objekter til XMl mv. Den benytter sig meget af det delte bibliotek \gls{SL}.\\
 
-\paragraph{ViewModels} namespacet indeholder viewmodels til alle views. Viewmodels indeholder den data som præsentationslaget binder til. Dette indebærer kommandoer til knapper, samt properties som skal bruges af viewet.
+\paragraph{ViewModels} namespacet indeholder viewmodels til alle views. Viewmodels indeholder den data som præsentationslaget binder til. Dette indebærer kommandoer til knapper, samt properties som skal bruges af viewet.\\
 
 \textbf{MainWindowViewModel}\\
-Denne viewmodel hører til MainWindow, som er hovedvinduet i \gls{AS}. Denne viewmodel indeholder alle produktkategorier, som har lister med produkter. Derudover er der kommandoer til at åbne alle andre vinduer i systemet. Denne viewmodel har subscribed på alle andre viewmodels "Loaded" events. Se nærmere omkring disse under \ref{eventaggregator_beskrivelse}.
+Denne viewmodel hører til MainWindow, som er hovedvinduet i \gls{AS}. Denne viewmodel indeholder alle produktkategorier, som har lister med produkter. Derudover er der kommandoer til at åbne alle andre vinduer i systemet. Denne viewmodel har subscribed på alle andre viewmodels "Loaded" events. Se nærmere omkring disse under afsnit \ref{WindowLoadedEvents_Beskrivelse}, side \pageref{WindowLoadedEvents_Beskrivelse}.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.2\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/Error.png}
-	\caption{Error}
-	\label{fig:modelhandler}
+	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/MainWindowVM}
+	\caption{MainWindowViewModel}
+	\label{fig:MainWindowViewModel}
 \end{figure}
+\bigskip
+
+\textbf{AddProductViewModel}\\
+Denne viewmodel hører til AddProductWindow og indeholder kommandoer og data der skal bruge for at oprette et nyt produkt. Dette indebærer bl.a. listen af produktkategorier, samt kommandoer til at oprette og annullere oprettelsen.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/AddProductVM}
+	\caption{AddProductViewModel}
+	\label{fig:AddProductViewModel}
+\end{figure}
+\bigskip
+
+\textbf{EditProductViewModel}\\
+Denne viewmodel hører til EditProductViewModel og indeholder kommandoer og data der skal bruges for at redigere et eksisterende produkt.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/EditProductVM}
+	\caption{EditProductViewModel}
+	\label{fig:EditProductViewModel}
+\end{figure}
+\bigskip
+
+\textbf{AddCategoryViewModel}\\
+Denne viewmodel hører til AddCategoryWindow og indeholder kommandoer og data der skal bruge for at oprette en ny produktkategori.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/AddCategoryVM}
+	\caption{AddCategoryViewModel}
+	\label{fig:AddCategoryViewModel}
+\end{figure}
+\bigskip
+
+\textbf{EditCategoryViewModel}\\
+Denne viewmodel hører til EditCategoryWindow og indeholder kommandoer og data der skal bruge for at redigere en produktkategori.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/EditCategoryVM}
+	\caption{EditCategoryViewModel}
+	\label{fig:EditCategoryViewModel}
+\end{figure}
+\bigskip
+
+\textbf{DeleteCategoryViewModel}\\
+Denne viewmodel hører til DeleteCategoryWindow og indeholder kommandoer og data der skal bruge for at slette en produktkategori.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/DeleteCategoryVM}
+	\caption{DeleteCategoryViewModel}
+	\label{fig:DeleteCategoryViewModel}
+\end{figure}
+\bigskip
 
 \paragraph{Brains} namespacet indeholder generel businesslogik for at kunne udføre handlinger, så som at oprette kommandoer, parse objekter til XMl mv. Den benytter sig meget af det delte bibliotek \gls{SL}.\\
 
@@ -111,7 +162,7 @@ Disse arver ale sammen fra PubSubEvent\footnote{En eventtype som bruges i PRISM 
 
 
 
-
+\label{WindowLoadedEvents_Beskrivelse}
 \textbf{AddProductWindowLoaded, DeleteCategoryWindowLoaded, EditCategoryWindowLoaded, AddCategoryWindowLoaded, EditProductWindowLoaded}
 Disse klasser arver ale sammen fra PubSubEvent\footnote{En eventtype som bruges i PRISM ~\cite{PRISM}}. De fungerer således som et event de raises, når et vindue loades, således at der kan deles data. Kommunikation mellem viewmodels er beskrevet nærmere på side \pageref{viewcomm}. \bigskip
 \begin{center}
