--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
@@ -9,10 +9,15 @@ Da \gls{SL} skulle designes blev det i første iteration klart at der ville opst
     \label{fig:oversigtSL}
 \end{figure}
 
-På figur \ref{fig:oversigtSL} ses det hvordan strukturen i SharedLib er opbygget.  
+På figur \ref{fig:oversigtSL} ses det hvordan strukturen i SharedLib er opbygget.  \\
 
+PUNKTFORM I FORHOLD TIL FIGUR!!!\\
 
+FORTÆL HER NOGET OVERVEJELSER VED SOLID!!!\\
 
+FORTÆL YDERLIGERE GENERELT OM SHAREDLIB!!!\\
+
+\input{Systemdesign/SharedLib/Models}
 \input{Systemdesign/SharedLib/Protocol}
 \input{Systemdesign/SharedLib/Commands}
 \input{Systemdesign/SharedLib/Marshallers}
