Mere klasse beskrivelse

--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -32,7 +32,14 @@
 }
 
 @misc{	TcpC,
-		title = {TcpClient Class},
+		title = {Relay Command},
   		howpublished = {\url{https://msdn.microsoft.com/en-us/library/system.net.sockets.tcpclient(v=vs.110).aspx}},
   		note = {Tilgået: 09/12-2015}
 }
+
+@misc{	RelayC,
+		title = {TcpClient Class},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/microsoft.teamfoundation.mvvm.relaycommand(v=vs.110).aspx}},
+  		note = {Tilgået: 09/12-2015}
+}
+
