--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/BLL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/BLL.tex
@@ -1,3 +1,5 @@
 \subsection{Business Logic Layer}
 
+\subsubsection{Klassebeskrivelser}
+\input{Systemdesign/Frontend/BLL/ShoppingList}
 \input{Systemdesign/Frontend/BLL/ProductCategoryList}
