--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
@@ -21,6 +21,8 @@ Denne skitse implementerede vi så.
 Da grænsefladen var opsat var det nu nødvendigt at opsætte viewmodels til at forbinde grænsefladen med de underliggende lag.
 
 \subsubsection{ViewModels}
+
+\subsubsection{Klassebeskrivelser}
 \textbf{CategoriesMenu}
 
 
@@ -57,14 +59,6 @@ ProductButtonContent har indholdet af 1 knap på grænsefladen, samt produktinfo
 	\label{fig:PBCon}
 \end{figure}
 
-\textbf{ShoppingList} \\
-ShoppingList indeholder de produkter som kunden gerne vil købe og er i sin enkelthed en indkøbskurv. Denne klasse arver fra Observable Collection og er derved også en liste. Dette gør klassen i stand til at tjekke på sin egen data og indeholde funktioner der hjælper med at oprette nye elementer, samt at kunne incrementere produktantal.
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.4\textwidth]{Systemdesign/Frontend/pics/ShoppingList}
-	\caption{ShoppingList.}
-	\label{fig:SL}
-\end{figure}
 
 
