--- a/LaTeX/Projektdokumtation/Systemdesign/backend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/GUI.tex
@@ -41,4 +41,5 @@ Den eneste dialog der afviger en del fra designet er til "Slet produkt". Dette e
 	\label{fig:admin_final_sletprodukt}
 \end{figure}
 
-Popup-vinduet på figur \ref{fig:admin_final_sletprodukt} er implementeret i MainWindowViewModel, da funktionaliteten af vinduet syntes for simpelt til at kunne retfærdiggøre at skulle lave et helt dialogvindue med tilhørende ViewModel.
+Popup-vinduet på figur \ref{fig:admin_final_sletprodukt} er implementeret i MainWindowViewModel, da funktionaliteten af vinduet syntes for simpelt til at kunne retfærdiggøre at skulle lave et helt dialogvindue med tilhørende ViewModel.\\\\
+Foruden dette, er der benyttet settings til at sætte IP og port til \gls{CS}, således disse bliver gemt. Disse indstillinger kan ændres ved at trykke på Filer og derefter Indstillinger. Før man gemmer port og IP, kan man teste forbindelsen.
