--- a/LaTeX/Projektdokumtation/Systemdesign/backend/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/Intro.tex
@@ -25,7 +25,7 @@ Herunder ses en kort beskrivelse af de forskellige namespaces, og hvad de indeho
 \item \textbf{Events} indeholder events der bruges til kommunikation mellem viewmodel, den tilhørende aggregator samt parametremodellen til nogen af disse events.
 \item \textbf{SocketEvents} indeholder de events der bliver raised af Client ved modtagelse af data.
 \item \textbf{Brains} indeholder generel businesslogik til bl.a. at oprette kommandoer til klienten, og fejl-håndtering.
-\item \textbf{Dependencies} indeholder sourcekode til at arbejde med commands.
+\item \textbf{Dependencies} indeholder sourcekode, RelayCommand~\cite{RelayC}, til at arbejde med commands mere effektivt.
 \item \textbf{Communication} indeholder klient til at skabe forbindelse til Central Server.
 \end{itemize}
 
