--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL.tex
@@ -1,5 +1,6 @@
 \subsection{Data Access Layer}
 
+\input{Systemdesign/Frontend/DAL/Intro}
 \subsubsection{Klassebeskrivelser}
 \input{Systemdesign/Frontend/DAL/FilePrinter}
 \input{Systemdesign/Frontend/DAL/Connection}
